@@ -1,4 +1,3 @@
-#DPATCHLEVEL=1
 Index: ufsutils/libdisklabel/Makefile
 ===================================================================
 --- /dev/null
