@@ -1,4 +1,3 @@
-#DPATCHLEVEL=1
 Index: ufsutils/libufs/type.c
 ===================================================================
 --- ufsutils.orig/libufs/type.c
