@@ -1,4 +1,3 @@
-#DPATCHLEVEL=1
 Index: ufsutils/badsect.ufs/Makefile
 ===================================================================
 --- ufsutils.orig/badsect.ufs/Makefile
