@@ -1,4 +1,3 @@
-#DPATCHLEVEL=1
 Index: ufsutils/bsdlabel/bsdlabel.c
 ===================================================================
 --- ufsutils.orig/bsdlabel/bsdlabel.c
