@@ -1,4 +1,3 @@
-#DPATCHLEVEL=1
 Index: ufsutils/dump.ufs/Makefile
 ===================================================================
 --- ufsutils.orig/dump.ufs/Makefile
