@@ -1,4 +1,3 @@
-#DPATCHLEVEL=1
 Index: ufsutils/dumpfs.ufs/dumpfs.c
 ===================================================================
 --- ufsutils.orig/dumpfs.ufs/dumpfs.c
