@@ -1,4 +1,3 @@
-#DPATCHLEVEL=1
 Index: ufsutils/ffsinfo/Makefile
 ===================================================================
 --- ufsutils.orig/ffsinfo/Makefile
