@@ -1,4 +1,3 @@
-#DPATCHLEVEL=1
 Index: ufsutils/fsck.ufs/gjournal.c
 ===================================================================
 --- ufsutils.orig/fsck.ufs/gjournal.c
