@@ -1,4 +1,3 @@
-#DPATCHLEVEL=1
 Index: ufsutils/fsdb.ufs/fsdb.8
 ===================================================================
 --- ufsutils.orig/fsdb.ufs/fsdb.8
