@@ -1,4 +1,3 @@
-#DPATCHLEVEL=1
 Index: ufsutils/growfs.ufs/growfs.c
 ===================================================================
 --- ufsutils.orig/growfs.ufs/growfs.c
