@@ -1,4 +1,3 @@
-#DPATCHLEVEL=1
 Index: ufsutils/mkfs.ufs/mkfs.c
 ===================================================================
 --- ufsutils.orig/mkfs.ufs/mkfs.c
