@@ -1,4 +1,3 @@
-#DPATCHLEVEL=1
 Index: ufsutils/tunefs.ufs/tunefs.c
 ===================================================================
 --- ufsutils.orig/tunefs.ufs/tunefs.c
