@@ -1,4 +1,3 @@
-#DPATCHLEVEL=1
 Index: ufsutils/include/ufs/ufs/ufsmount.h
 ===================================================================
 --- ufsutils.orig/include/ufs/ufs/ufsmount.h
