@@ -6,6 +6,7 @@ ufsutils (7.1-3) UNRELEASED; urgency=low
   * Do not set unused INSTALL_PROGRAM.
   * Line wrap Build-Depends fields for lines longer than 80 chars.
   * Use asterisks for bulleted lists in package description.
+  * Remove DPATCHLEVEL variable from patches.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 18 Apr 2009 01:47:10 +0200
 
